load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# Type-checks, and emits output to
# bazel-bin/examples/simple/foo.js
# bazel-bin/examples/simple/foo.d.ts
ts_project(
    name = "ts",
    srcs = ["foo.ts"],
    declaration = True,
)

# Writes output to bazel-bin/examples/simple/build/foo.js
ts_project(
    name = "outdir",
    srcs = ["foo.ts"],
    tsconfig = {
        "compilerOptions": {
            "outDir": "build",
        },
    },
)
build_test(
    name = "build_test",
    targets = [
        ":ts",
    ],
)
